k8s-prod/fastapi-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fastapi-app
  namespace: prod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fastapi-app
  template:
    metadata:
      labels:
        app: fastapi-app
    spec:
      imagePullSecrets:
        - name: ecr-secret
      containers:
        - name: fastapi
          image: PLACEHOLDER_IMAGE
          ports:
            - containerPort: 8000
